# lib/db/src/schema/index.ts
@@ -4,3 +4,5 @@ export * from "./rooms";
 export * from "./bookings";
 export * from "./reviews";
 export * from "./housekeeping";
+export * from "./staff";
+export * from "./menu";
